# imu_reader

./: .gitignore  CMakeLists.txt  README.md  gyro_reader  gyro_reader.cpp
include/ImuReader/: GyroReader.hpp
source/: GyroReader.cpp  main.cpp
